# projekt

./: CMakeLists.txt  CMeansDiscretization.cpp  CMeansDiscretization.h  Dataset.h  Iris.txt  KMeansDiscretization.cpp  KMeansDiscretization.h  Loader.cpp  Loader.h  Set.cpp  Set.h  main.cpp
